--- a/proyecto 1/server/docker-compose.yml
+++ b/proyecto 1/server/docker-compose.yml
@@ -2,20 +2,20 @@ version: '3.3'
 
 services:
   postgres:
-    image: "postgres:${POSTGRES_VERSION}"
+    image: postgres:${POSTGRES_VERSION}
     environment:
-      - POSTGRES_DB="${POSTGRES_DB}"
-      - POSTGRES_USER="${POSTGRES_USER}"
-      - POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - '5432:5432'
     volumes:
       - ./src/database/postgres_data:/var/lib/postgresql/data
 
   pgadmin:
-    image: "${PGADMIN_IMAGE}"
+    image: ${PGADMIN_IMAGE}
     environment:
-      - PGADMIN_DEFAULT_EMAIL="${PGADMIN_EMAIL}"
-      - PGADMIN_DEFAULT_PASSWORD="${PGADMIN_PASSWORD}"
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
     ports:
       - '5050:80'
